server/k8s/production/minikube/ingress/enigma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enigma-ingress
  namespace: enigma
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - enigma-api.shreedev.space
      secretName: enigma-tls
  rules:
    - host: enigma-api.shreedev.space
      http:
        paths:
          - path: /app/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway
                port:
                  number: 3000
